--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "firebase": "^7.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.4",
+    "react-lazyload": "^3.2.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
