--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^7.14.1",
     "formik": "^2.2.6",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.4",
     "react-lazyload": "^3.2.0",
@@ -25,7 +26,8 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
